# Chile_Data_Acquisition

./: .gitignore  April_Bulk_Presentacion.csv  April_Bulk_Presentacion_1.csv  README.md  pyproject.toml  requirements.txt
Code/: Chile.py  README_Chile_Data_Processing.md  README_Chile_Data_Processing.txt  fast.py  fast_vaex.py  optimized.py  part_1.py  part_2.py  part_3.py  summu.ipynb  test.py  test_1.py
Code/Chile_Data_Acquisition_Cenabast/Code/: Chile.py  README_Cenabast_Data_Processing.md  README_Cenabast_Data_Processing.txt  part_1.py  part_2.py
Code/Chile_Data_Acquisition_Cenabast/Control/: Cnbt_Mapping.xlsx  Control_File.xlsx  New_Market_Basket.xlsx
Control/: April_Bulk.csv  Control_File.xlsx  MP_Cbnt_Mapping.xlsx  Market Basket from Chile Compra.xlsx  Market_Basket.xlsx  New_Market_Basket.xlsx  OrganismoPublico_Mapping.xlsx  Proveedor Mapping.xlsx  Sector.xlsx
