[tool.poetry]
name = "chili-data-acquisition"
version = "0.1.0"
description = ""
authors = ["Charan A A <mariswarycharan@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "*"  # or the latest version
boto3 = "*"  # or the latest version
tqdm = "*"   # or the latest version
ray = {extras = ["default"], version = "^2.35.0"}     # or the latest version
beautifulsoup4 = "*"  # or the latest version
modin = "*"  # or the latest version
pyarrow = "*"  # or the latest version
openpyxl = "*"  # or the latest version
swifter = "^1.4.0"
fuzzywuzzy = {extras = ["speedup"], version = "^0.18.0"}
mapply = "^0.1.26"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
